<resources>
    <string name="app_name">YourChoice</string>
    <string name="main_logo">logo</string>
    <string name="login_hint_et">User name</string>
    <string name="password_hint_et">Password</string>
    <string name="please_sign_in_tv">Please sign in</string>
    <string name="sign_in_with_facebook_btn">Sign in with Facebook</string>
    <string name="sign_in_with_google_btn">Sign in with Google</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="login_success">Login successful</string>
    <string name="verify_code_sending">Wait, your code is sending</string>
    <string name="err_phone_format">Write correct phone number</string>
    <string name="err_verify_code">Error! Get code first, then write into the field</string>
    <string name="err_phones_mismatch">Stored and wited phone numbers mismatch</string>

    <string name="googlepay_button_content_description">Google Pay</string>


    <string name="web_client_id">290055398849-tnkdl4feh96242qb8189omeb1808o16l.apps.googleusercontent.com</string>
    <string name="facebook_app_id">410577849737392</string>
    <string name="fb_login_protocol_scheme">fb410577849737392</string>

    <string name="title_activity_news">NewsActivity</string>
    <!--BottomNavigation-->
    <string name="title_news">News</string>
    <string name="title_addpost">Add post</string>
    <string name="title_menu">Menu</string>
    <string name="title_feedback">Help&amp;Feedback</string>

    <string name="get_verification_code">Get verification code</string>
    <string name="phone_hint">+78005553535</string>
    <string name="name_hint">Ivan</string>
    <string name="write_code_hint">Write code from SMS here</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number_tv">Phone number</string>
    <string name="user_name_tv">Write your name</string>
    <string name="verification_code_tv">Verification code</string>
    <string name="title_delete_post">delete post</string>
    <string name="post_name_hint">Post name</string>
    <string name="err_fill_all_fields">Please, fill in all the fields</string>
    <string name="post_add_success">Post added successful</string>
    <string name="view_profile">View profile</string>
    <string name="likes">Likes</string>
    <string name="interests">Interests</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback"><![CDATA[Help&Feedback]]></string>

</resources>
