<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="320dp"
        android:id="@+id/login_with_phone_dialog">


    <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_et"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:hint="@string/phone_hint"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/phone_title_tv"/>

    <Button
            android:text="@string/get_verification_code"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/get_verification_code_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/phone_et"/>
    <EditText
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:id="@+id/user_name_et"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/name_title_tv"
            android:hint="@string/name_hint"/>

    <EditText
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/verification_code_et" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:hint="@string/write_code_hint"/>

    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/verification_code_et"
            app:layout_constraintHorizontal_bias="0.476"/>
    <TextView
            android:text="@string/phone_number_tv"
            android:layout_width="146dp"
            android:layout_height="24dp"
            android:id="@+id/phone_title_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorHeadlineText" android:textSize="18sp"/>
    <TextView
            android:text="@string/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_title_tv" android:textSize="18sp"
            android:textColor="@color/colorHeadlineText" android:layout_marginStart="72dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/get_verification_code_btn"/>
    <TextView
            android:text="@string/verification_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_name_et" android:textColor="@color/colorHeadlineText"/>
</android.support.constraint.ConstraintLayout>