<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.LoginActivity" android:background="@drawable/login_activity_background">
    <ImageView
            android:src="@drawable/main_logo"
            android:layout_width="132dp"
            android:layout_height="100dp"
            android:id="@+id/main_logo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="86dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="114dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="114dp"
            android:contentDescription="@string/main_logo"/>
    <TextView
            android:text="@string/please_sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:fontFamily="@font/salsa"
            android:textSize="34sp"
            android:layout_marginTop="328dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/sign_in_with_google_btn"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:id="@+id/google_sign_in_btn"
            android:background="@drawable/google_sign_in_btn" android:layout_marginTop="408dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/roboto"
            android:textColor="@color/colorMain" android:textAlignment="center"/>

    <Button
            android:text="@string/sign_in_with_phone_btn"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:id="@+id/phone_sign_in_btn"
            android:background="@drawable/phone_sign_in_btn"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/roboto"
            android:textColor="@color/colorMain" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_btn" android:textAlignment="center"
    />
    <!--<com.facebook.loginGoogle.widget.LoginButton-->
    <!--android:text="@string/sign_in_with_facebook_btn"-->
    <!--android:layout_width="280dp"-->
    <!--android:layout_height="56dp"-->
    <!--android:id="@+id/facebook_sign_in_btn"-->
    <!--android:layout_marginTop="488dp"-->
    <!--app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"-->
    <!--android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
    <!--android:background="@drawable/facebook_sign_in_btn" android:fontFamily="@font/roboto"-->
    <!--android:textColor="@color/colorHiddenText"/>-->
</android.support.constraint.ConstraintLayout>